# project-1

./: AddAutomaton.cpp  AddAutomaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  EOFAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  Left_ParenAutomaton.cpp  Left_ParenAutomaton.h  Lexer.cpp  LineCommentAutomaton.cpp  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Q_MarkAutomaton.cpp  Q_MarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Right_ParenAutomaton.cpp  Right_ParenAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h  inputTest.txt  main.cpp
